--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" type="text/css" href="C.css">  
 </head>
 <style>
-a{text-decoration:none;}
+a{text-decoration:none;
+  text-color:white;}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;
@@ -17,6 +18,9 @@ body{
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
+#menu{background:black;
+      margin-left:0;
+      margin-right:0;}
 
 
 </style>
@@ -24,11 +28,13 @@ p1{font-family:fantasy;}
 <header>
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header><br/>
+<div id="menu">
 <a href="Calculus.html">Matematika |</a>
 <a href="Relativitaskhusus.html">Fisika |</a>
 <a href="computerscience.html">Computer science |</a>
 <a href="CaesarCipher.html">My JavaScript Project |</a>
 <a href="Contact-me.html">kontak |</a>  
+</div>
 <hr color="black">
 <h2 align="center"><em><b>Content:</b></em></h2>
 <div class="container">
