--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
 a{text-decoration:none;
-  text-color:white;}
+  color:white;}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;
@@ -19,8 +19,7 @@ body{
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
 #menu{background:black;
-      margin-left:0;
-      margin-right:0;}
+      margin:0;}
 
 
 </style>
