--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ body{
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
-#menu{background:black;
-      margin:0;}
+#menu{background:black;margin:0px;}
 
 
 </style>
