--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 <style>
 a{text-decoration:none;
-  color:white;}
+  color:white;
+  font-family:cursive;
+  width:10px;}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;
+  margin:0;
   }
 
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
-#menu{background:black;margin:0px;}
 
 
 </style>
