--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <style>
 a{text-decoration:none;
   color:white;
-  font-family:cursive;
-  width:10px;}
+  font-family:sans-serif;
+  width:20px;}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;
