--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body{
   background-repeat: no-repeat;
   margin:0;
   }
-
+#menu{background:black;}
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
