--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 <link rel="stylesheet" type="text/css" href="C.css">  
 </head>
 <style>
-a{text-decoration:none;
-  color:white;
-  font-family:sans-serif;
-  width:20px;}
+a{text-decoration:none;}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;
-  margin:0;
-  }
-#menu{background:black;}
+  margin:0;}
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
