--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 a{text-decoration:none;}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
-  background-repeat: no-repeat;
-  margin:0;}
+  background-repeat: no-repeat;}
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
