--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
+
 <link rel="icon" href="logo.png" height=250px>
 <meta charset="utf-8">
 <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
 <link rel="stylesheet" type="text/css" href="C.css">  
+<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
 </head>
 <style>
 a{text-decoration:none;}
@@ -15,8 +17,7 @@ body{
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
-
-
+#keterangan{font-family: 'Gruppo', cursive;} 
 </style>
 <body>
 <header>
@@ -44,7 +45,7 @@ p1{font-family:fantasy;}
 <h2 align="center"><em><strong>About Me:</strong></em></h2>
 <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=400px /></p>
 <br>
-<p align="center"><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</em></p>
+<p id="keterangan" align="center"><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</em></p>
 <hr color=black>
 <p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p>
 </script>
