--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p1{font-family:fantasy;}
 <h2 align="center"><em><strong>About Me:</strong></em></h2>
 <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=400px /></p>
 <br>
-<p id="keterangan" align="center"><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</em></p>
+<p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
 <hr color=black>
 <p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p>
 </script>
