--- a/computerscience.html
+++ b/computerscience.html
@@ -29,7 +29,7 @@
       <th width="150">
         <a href="BilanganBiner.html">Bilangan biner</a>
       </th>
-      <th> </th>
+      <th><a href="EnkripsiCaesar.html">Caesar Cipher</a></th>
       <td>
         
       </td>
