--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
 </head>
 <style>
-a{text-decoration:none;}
+a{text-decoration:none;
+font-size:13px;
+}
 body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;}
