--- a/EnkripsiCaesar.html
+++ b/EnkripsiCaesar.html
@@ -15,7 +15,7 @@
 <div id="judul">Enkripsi:Teknik Enkripsi Caesar</div>
 <p>teknik enkripsi caesar merupakan teknik enkripsi paling sederhana. teknik ini cuma menggeser huruf-huruf penyusun sebuah kata/kalimat dengan angka pergeseran tertentu. misalnya dengan nilai pergeseran=2, huruf "a" digeser menjadi "c", huruf "b" digeser menjadi "d", dan seterusnya. lalu bagaimana dengan huruf "z" ? jika huruf yang digeser mencapai huruf terakhir alfabet (yaitu <b>z</b>), maka perhitungannya dimulai kembali dari huruf "a". misalnya huruf "x" digeser sejauh 5, maka hasilnya menjadi "c". untuk lebih memahaminya,perhatikan gambar berikut:</p><br />
 <img src="gambarcaesarcipher.png" alt="gambar" /><br />
-<p>untuk mempraktek-kan nya,saya telah membuat program untuk teknik enkripsi caesar menggunakan bahasa javascript. ini tampilan dari program tersebut</p><p align="center"><img src="caesarjs.JPG" alt="foto" width="250"/></p><p>itu adalah contoh programnya. anda dapat langsung mencobanya <a href="CaesarChiper.html">disini</a>. selamat mencoba</p>
+<p>untuk mempraktek-kan nya,saya telah membuat program untuk teknik enkripsi caesar menggunakan bahasa javascript. ini tampilan dari program tersebut</p><p align="center"><img src="caesarjs.JPG" alt="foto" width="250"/></p><p>itu adalah contoh programnya. anda dapat langsung mencobanya <a href="CaesarCipher.html">disini</a>. selamat mencoba</p>
 <hr />
 <footer>copyright &copy; fikri mulyana setiawan</footer>
 </body>
