--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <link rel="icon" href="logo.png" height=250px>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
 <link rel="stylesheet" type="text/css" href="styleindex.css">  
 <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
