--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@ p1{font-family:fantasy;}
 <h2 align="center"><em><b>Content:</b></em></h2>
 <div class="container">
     <div class="content">
-      <img src="slide1.jpg" alt="foto" width="340"/>
-      <img src="slide2.JPG" alt="foto" width="340" />
-      <img src="slide3.JPG" alt="foto" width="340" />
-      <img src="machinelearning.jpg" alt="foto" width="340" />
+      <img src="slide1.jpg" alt="foto" />
+      <img src="slide2.JPG" alt="foto" />
+      <img src="slide3.JPG" alt="foto"  />
+      <img src="machinelearning.jpg" alt="foto"  />
     </div>
 </div>
 
 
 <h2 align="center"><em><strong>About Me:</strong></em></h2>
-<p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=400px /></p>
+<p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
 <br>
 <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
 <hr color=black>
