--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;}
 #fotoprofil{border-color:#0066FF;}
+a{text-decoration:none;}
 p1{font-family:fantasy;}
 .hakcipta {font-size:12px;}
 #keterangan{font-family: 'Gruppo', cursive;} 
