--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p1{font-family:fantasy;}
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header><br/>
 <div id="menu">
-<a href="Calculus.html">Matematika |</a>
+<a href="Math-menu.html">Matematika |</a>
 <a href="Relativitaskhusus.html">Fisika |</a>
 <a href="computerscience.html">Computer science |</a>
 <a href="CaesarCipher.html">My JavaScript Project |</a>
