--- a/Math-menu.html
+++ b/Math-menu.html
@@ -28,7 +28,7 @@
       <th width="150">
         <a href="Turunan-bilangan-euler.html">Turunan Bilangan Euler/Konstanta Napier</a>
       </th>
-      <th><a href="Turunan-ln-x.html">turunan fungsi ln|x|</a></th>
+      <th><a href="Turunan-ln-x.html">Turunan Fungsi ln|x|</a></th>
       <td>
       </td>
     </tr>
