--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
 <link rel="stylesheet" type="text/css" href="styleindex.css">  
 <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">  
 </head>
 <style>
 
