--- a/Turunan-ln-x.html
+++ b/Turunan-ln-x.html
@@ -33,6 +33,20 @@ $\frac{d}{dy}[ln|y|]=\frac{1}{y}$ <br />
 <div class="rumus-akhir">
   $\frac{d}{dx}[ln|x|]=\frac{1}{x}$
 </div>
+<p>tentu saja, cara untuk mendapatkan rumus ini <em>nggak cuma</em> satu. cara lainnya yaitu dengan menggunakan aturan rantai. perhatikan penjabaran berikut:</p>
+<p>$y=ln|x|$$-->x=e^y$</p>
+ <p>lalu turunkan kedua ruas persamaan:</p>
+ <p>$\frac{dx}{dx}=\frac{d}{dx}e^y$</p>
+ <p>kita tau bahwa turunan x terhadap x sama dengan 1. kemudian,untuk mendapatkan turunan dari $e^y$ terhadap x dengan aturan rantai.</p>
+ <p>$1=\frac{d}{dy}(e^y).\frac{dy}{dx}$</p>
+ <p>$1=e^x.\frac{dy}{dx}$</p>
+ <p>$\frac{1}{e^y}=\frac{dy}{dx}$</p>
+ <p>karena $e^y=x$, maka:</p>
+ <p>$\frac{1}{x}=\frac{dy}{dx}$</p>
+ <p>$\frac{d}{dx}[ln|x|]=\frac{1}{x}$</p>
+ <div class="rumus2">
+   $\frac{d}{dx}[ln|x|]=\frac{1}{x}$
+ </div> 
 <br />
 <hr />
 <div class="copyright">copyright &copy; fikri mulyana setiawan </div>
