--- a/index.html
+++ b/index.html
@@ -42,17 +42,21 @@ p1{font-family:fantasy;}
   }
 </style>
 <body>
-<header>
-<h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
-</header><br/>
-<div id="menu">
-<a href="Math-menu.html">Matematika |</a>
-<a href="Relativitaskhusus.html">Fisika |</a>
-<a href="computerscience.html">Computer science |</a>
-<a href="CaesarCipher.html">My JavaScript Project |</a>
-<a href="Contact-me.html">kontak |</a>  
+<div>
+<div align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</div>
 </div>
-<hr color="black">
+ <div id="header">
+    <div align="center"><img src="logo.png"> </div>
+  </div>
+  <div id="menu">
+    <div id="navbar">
+    <a href="Math-menu.html">| Matematika |</a>
+    <a href="Relativitaskhusus.html">Fisika |</a>
+    <a href="computerscience.html">Computer science |</a>
+    <a href="CaesarCipher.html">My JavaScript Project |</a>
+    <a href="Contact-me.html">kontak |</a>
+    </div>
+  </div> 
 <h2 align="center"><em><b>Content:</b></em></h2>
 <div class="container">
     <div class="content">
@@ -68,8 +72,7 @@ p1{font-family:fantasy;}
 <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
 <br>
 <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
-<hr color=black>
-<p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p>
+<div id="copyright"><p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p></div>  
 </script>
 
 <script type="text/javascript" charset="utf-8">
