--- a/index.html
+++ b/index.html
@@ -2,50 +2,68 @@
 <html>
 
 <head>
-
-<link rel="icon" href="logo.png" height=250px>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
-<link rel="stylesheet" type="text/css" href="styleindex.css">  
-<link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">  
+  <link rel="icon" href="logo.png" height=250px>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
+  <link rel="stylesheet" type="text/css" href="styleindex.css">
+  <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
 </head>
 <style>
-
-body{
-  background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
-  background-repeat: no-repeat;}
-#fotoprofil{border-color:#0066FF;}
-a{text-decoration:none;}
-p1{font-family:fantasy;}
-.hakcipta {font-size:12px;}
-#keterangan{font-family: 'Gruppo', cursive;} 
-
-#loading {
-    width:100px;
-    height:100px;
-    border:solid 5px #ccc;
-    border-radius:100%;
-    border-top-color:red;
-    animation:putar 1s linear infinite;
-    position:fixed;
-    right:0;
-    left:0;
-    top:0;
-    bottom:0;
-    margin:auto;
+  body {
+    background: ;
+    
   }
-  @keyframes putar{
-    from{transform:rotate(0deg)}
-    to{transform:rotate(360deg)}
+
+  #fotoprofil {
+    border-color: #0066FF;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  p1 {
+    font-family: fantasy;
+  }
+
+  .hakcipta {
+    font-size: 12px;
+  }
+
+  #keterangan {
+    font-family: 'Gruppo', cursive;
+  }
+
+  #loading {
+    width: 100px;
+    height: 100px;
+    border: solid 5px #ccc;
+    border-radius: 100%;
+    border-top-color: red;
+    animation: putar 1s linear infinite;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
+
+  @keyframes putar {
+    from {
+      transform: rotate(0deg)
+    }
+
+    to {
+      transform: rotate(360deg)
+    }
   }
 </style>
+
 <body>
-<div>
-<div align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</div>
-</div>
- <div id="header">
+  <div id="header">
     <div align="center"><img src="logo.png"> </div>
   </div>
   <div id="menu">
@@ -56,29 +74,27 @@ p1{font-family:fantasy;}
     <a href="CaesarCipher.html">My JavaScript Project |</a>
     <a href="Contact-me.html">kontak |</a>
     </div>
-  </div> 
-<h2 align="center"><em><b>Content:</b></em></h2>
-<div class="container">
+  </div>
+  <h2 align="center"><em><b>Content:</b></em>
+  </h2>
+  <div class="container">
     <div class="content">
       <img src="slide1.jpg" alt="foto" />
       <img src="slide2.JPG" alt="foto" />
-      <img src="slide3.JPG" alt="foto"  />
-      <img src="machinelearning.jpg" alt="foto"  />
+      <img src="slide3.JPG" alt="foto" />
+      <img src="machinelearning.jpg" alt="foto" />
     </div>
-</div>
-
-
-<h2 align="center"><em><strong>About Me:</strong></em></h2>
-<p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
-<br>
-<p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
-<div id="copyright"><p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p></div>  
-</script>
-
-<script type="text/javascript" charset="utf-8">
-    var loading=document.getElementById('loading');
-    window.addEventListener('load',function(){loading.style.display="none"});
-</script>    
+  </div>
+  <h2 align="center"><em><strong>About Me:</strong></em></h2>
+  <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
+  <br>
+  <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
+  <div id="copyright"><p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p></div>
+  </script>
+  <script type="text/javascript" charset="utf-8">
+    var loading = document.getElementById('loading');
+    window.addEventListener('load', function() { loading.style.display = "none" });
+  </script>
 </body>
 
 </html>
