--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <a href="Contact-me.html">kontak |</a>
     </div>
   </div>
-  <h2 align="center"><em><b>Content:</b></em>
-  </h2>
+  <div class="h2" align="center">Content:
+  </div>
   <div class="container">
     <div class="content">
       <img src="slide1.jpg" alt="foto" />
@@ -85,7 +85,7 @@
       <img src="machinelearning.jpg" alt="foto" />
     </div>
   </div>
-  <h2 align="center"><em><strong>About Me:</strong></em></h2>
+  <div class="h2" >About Me:</div>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
