--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <img src="machinelearning.jpg" alt="foto" />
     </div>
   </div>
-  <h2 ><b><em>About Me:</em></b></h2>
+  <h2 align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</b></em></p>
