--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" href="logo_home.47" height=250px>
+  <link rel="icon" href="logo.png" height=250px>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
@@ -64,7 +64,7 @@
 
 <body>
   <div id="header">
-    <div align="center"><img src="logo.png"> </div>
+    <div align="center"><img src="logo_home.47"> </div>
   </div>
   <div id="menu">
     <div id="navbar">
