--- a/CaesarCipher.html
+++ b/CaesarCipher.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<script>alert("buka website ini pada perangkat mobile untuk mendapatkan pengalaman yang lebih baik")</script>
   <p> </p><br /><h1 align="center"><b>Caesar Cipher</b></h1>
 <div class="kartu">
   <label><div class="teks"><b>Input Kata:</b></div>
