--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <a href="Math-menu.html">| Matematika |</a>
     <a href="Relativitaskhusus.html">Fisika |</a>
     <a href="computerscience.html">Computer science |</a>
-    <a href="CaesarCipher.html">My JavaScript Project |</a>
+    <a href="Javascriptproject-menu.html">My JavaScript Project |</a>
     <a href="Contact-me.html">kontak |</a>
     </div>
   </div>
