--- a/Calculator.html
+++ b/Calculator.html
@@ -50,6 +50,9 @@
             <button onclick="bhasil()" id="b=" type="button" class="btn btn-primary">=</button>
             <button onclick="bAC()" id="bAC" type="button" class="btn btn-primary">AC</button>
           </div>
+
+          <div class="btn-group mr-2 btn-block" role="group" aria-label="Fifth group">
+            <button onclick="bnol()" id="b0" type="button" class="btn btn-primary">0</button>
           
         </div>
       </div>
