--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa, web developer, dan (calon) programmer. Ia sangat antusias ketika menemukan hal yang menantang, seperti teka-teki,dan tentu saja subjek matematika dan fisika. Ia sekarang duduk di bangku SMA kelas XII. Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic), javascript(basic), dan juga python (intermediate). selain seorang (calon) programmer, fikri juga seorang (calon) fisikawan.</b></em></p>
-  <div id="copyright"><p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p></br><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+  <div id="copyright"><p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p></br><p align="center"><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db"  alt="DMCA.com Protection Status" /></a></p>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
   </script>
   <script type="text/javascript" charset="utf-8">
     var loading = document.getElementById('loading');
