--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  
   <link rel="stylesheet" type="text/css" href="styleindex.css">
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
@@ -66,15 +67,43 @@
   <div id="header">
     <div align="center"><img src="logo_home.47"> </div>
   </div>
-  <div id="menu">
-    <div id="navbar">
-    <a href="Math-menu.html">| Matematika |</a>
-    <a href="Relativitaskhusus.html">Fisika |</a>
-    <a href="computerscience.html">Computer science |</a>
-    <a href="Javascriptproject-menu.html">My JavaScript Project |</a>
-    <a href="Contact-me.html">kontak |</a>
+  <nav class="navbar navbar-dark bg-dark ">
+    <a class="navbar-brand text-warning" href="#">Menu</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Relativitas.html">Fisika</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Math-menu.html">Matematika</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="computerscience.html">Computer Science</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Javascriptproject-menu.html">Javascript Project</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Contact-me.html">Contact Me</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Quick link
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="Calculator.html">Calculator</a>
+            <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
+          </div>
+        </li>
+      </ul>
     </div>
-  </div>
+  </nav>
   <h2 align="center" color="#D49513"><b><em>Content:</em></b>
   </h2>
   <div class="container">
@@ -89,12 +118,15 @@
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa, web developer, dan (calon) programmer. Ia sangat antusias ketika menemukan hal yang menantang, seperti teka-teki,dan tentu saja subjek matematika dan fisika. Ia sekarang duduk di bangku SMA kelas XII. Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic), javascript(basic), dan juga python (intermediate). selain seorang (calon) programmer, fikri juga seorang (calon) fisikawan.</b></em></p>
-  <div id="copyright"><p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p></br><p align="center"><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db"  alt="DMCA.com Protection Status" /></a></p>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+  <div id="copyright" align="center"><p class="hakcipta">copyright &copy;fikri mulyana setiawan</br><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db"  alt="DMCA.com Protection Status" /></a></p>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
   </script>
   <script type="text/javascript" charset="utf-8">
     var loading = document.getElementById('loading');
     window.addEventListener('load', function() { loading.style.display = "none" });
   </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>  
 </body>
 
 </html>
