--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Relativitas.html">Fisika</a>
+          <a class="nav-link" href="Relativitaskhusus.html">Fisika</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Math-menu.html">Matematika</a>
