--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -31,8 +31,9 @@
       <th>
         <a href="Calculator.html">Calculator</a>
       </th>
-      <td>
-      </td>
+    </tr>
+    <tr>
+      <td>< a href="BMI_calculator.html">BMI calculator</a></td>
     </tr>
   </table>
 </div>
