--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="Calculator.html">Calculator</a>
             <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
+            <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
           </div>
         </li>
       </ul>
