--- a/BMI_calculator.html
+++ b/BMI_calculator.html
@@ -38,7 +38,7 @@
   </div>
 </div>
 <div class="caption">
-  <p>BMI (Body Mass Index) adalah index yang mengukur massa tubuh (atau "berat") dan juga tinggi badan. kedua parameter ini nantinya dapat menentukan apakah berat badan atau tinggi seseorang ideal. Massa tubuh yang akan diukur harus dalam satuan kilogram (kg) dan tinggi badan dalam satuan meter (m). sekarang, coba ukur BMI anda sendiri dengan program di bawah ini. Data yang dipakai untuk program ini didapat dari <a href="https://www.euro.who.int/en/health-topics/disease-prevention/nutrition/a-healthy-lifestyle/body-mass-index-bmi> WHO Europe</a</p>
+  <p>BMI (Body Mass Index) adalah index yang mengukur massa tubuh (atau "berat") dan juga tinggi badan. kedua parameter ini nantinya dapat menentukan apakah berat badan atau tinggi seseorang ideal. Massa tubuh yang akan diukur harus dalam satuan kilogram (kg) dan tinggi badan dalam satuan meter (m). sekarang, coba ukur BMI anda sendiri dengan program di bawah ini. Data yang dipakai untuk program ini didapat dari <a href="https://www.euro.who.int/en/health-topics/disease-prevention/nutrition/a-healthy-lifestyle/body-mass-index-bmi"> WHO Europe</a></p>
 </div>
 <div class="formulir">
   <form>
