--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -25,12 +25,12 @@
   <hr />
   <table width="300" border="0">
     <tr>
-      <th width="150">
+      <td width="150">
         <a href="CaesarCipher.html">Caesar Cipher</a>
-      </th>
-      <th>
+      </td>
+      <td>
         <a href="Calculator.html">Calculator</a>
-      </th>
+      </td>
     </tr>
     <tr>
       <td><a href="BMI_calculator.html">BMI calculator</a></td>
