--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -25,15 +25,15 @@
   <hr />
   <table width="300" border="0">
     <tr>
-      <td width="150">
+      <th width="150">
         <a href="CaesarCipher.html">Caesar Cipher</a>
-      </td>
-      <td>
+      </th>
+      <th>
         <a href="Calculator.html">Calculator</a>
-      </td>
+      </th>
     </tr>
     <tr>
-      <td><a href="BMI_calculator.html">BMI calculator</a></td>
+      <th><a href="BMI_calculator.html">BMI calculator</a></th>
     </tr>
   </table>
 </div>
