--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <a class="dropdown-item" href="Calculator.html">Calculator</a>
             <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
             <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
+            <a class="dropdown-item" href="Math_solver.html">Math Solver</a>
           </div>
         </li>
       </ul>
