--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -34,6 +34,7 @@
     </tr>
     <tr>
       <th><a href="BMI_calculator.html">BMI calculator</a></th>
+      <th><a href="Math_solver.html">Math solver</a></th>
     </tr>
   </table>
 </div>
