--- a/index.html
+++ b/index.html
@@ -109,12 +109,32 @@
   <h2 align="center" color="#D49513"><b><em>Content:</em></b>
   </h2>
   <div class="container">
-    <div class="content">
-      <img src="slide1.jpg" alt="foto" />
-      <img src="slide2.JPG" alt="foto" />
-      <img src="slide3.JPG" alt="foto" />
-      <img src="machinelearning.jpg" alt="foto" />
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="slide1.jpg" class="d-block w-100" alt="s1">
     </div>
+    <div class="carousel-item">
+      <img src="slide2.JPG" class="d-block w-100" alt="s2">
+    </div>
+    <div class="carousel-item">
+      <img src="slide3.JPG" class="d-block w-100" alt="s3">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
   </div>
   <h2 align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
