--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div> <br/>
   </div>
   <h2 align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
