--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
             <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
             <a class="dropdown-item" href="Math_solver.html">Math Solver</a>
+            <a class="dropdown-item" href="Stopwatch.html">Stopwatch</a>
           </div>
         </li>
       </ul>
