--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -36,6 +36,9 @@
       <th><a href="BMI_calculator.html">BMI calculator</a></th>
       <th><a href="Math_solver.html">Math solver</a></th>
     </tr>
+    <tr>
+      <th><a href="Stopwatch.html">Stopwatch</a></th>
+    </tr>
   </table>
 </div>
 </body>
