--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <body>
   <div id="header">
-    <div align="center"><img src="logo_home.47"> </div>
+    <div align="center"><img src="Website_logo.png"> </div>
   </div>
   <nav class="navbar navbar-dark bg-dark ">
     <a class="navbar-brand text-warning" href="#">Menu</a>
