--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" href="favicon.png" height=250px>
+  <link rel="icon" href="logo_fix.png" height=250px>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
@@ -65,7 +65,7 @@
 
 <body>
   <div id="header">
-    <div align="center"><img src="logo_fix.png"> </div>
+    <div align="center"><img src="logo_home.47"> </div>
   </div>
   <nav class="navbar navbar-dark bg-dark ">
     <a class="navbar-brand text-warning" href="#">Menu</a>
