--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="styleindex.css">
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
 </head>
 <style>
   body {
@@ -65,7 +66,7 @@
 
 <body>
   <div id="header">
-    <div align="center"><img src="logo_home.47"> </div>
+    <div align="center"><img class="image" src="fikri_notes.png"><br/><h1>Fikri Notes</h1> </div>
   </div>
   <nav class="navbar navbar-dark bg-dark ">
     <a class="navbar-brand text-warning" href="#">Menu</a>
