--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
             <a class="dropdown-item" href="Math_solver.html">Math Solver</a>
             <a class="dropdown-item" href="Stopwatch.html">Stopwatch</a>
+            <a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a> 
           </div>
         </li>
       </ul>
