--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
             <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
             <a class="dropdown-item" href="Math_solver.html">Math Solver</a>
             <a class="dropdown-item" href="Stopwatch.html">Stopwatch</a>
+            <a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a>  
             <a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a> 
+            <p class="dropdown-item">Untuk lebih lengkapnya , kunjungi laman <a href="Javascript project-menu.html">My Javascript Project</a></p>
+              
           </div>
         </li>
       </ul>
