--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -26,18 +26,19 @@
   <table width="300" border="0">
     <tr>
       <th width="150">
-        <a href="CaesarCipher.html">Caesar Cipher</a>
+        <a href="CaesarCipher.html">-Caesar Cipher</a>
       </th>
       <th>
-        <a href="Calculator.html">Calculator</a>
+        <a href="Calculator.html">-Calculator</a>
       </th>
     </tr>
     <tr>
-      <th><a href="BMI_calculator.html">BMI calculator</a></th>
-      <th><a href="Math_solver.html">Math solver</a></th>
+      <th><a href="BMI_calculator.html">-BMI calculator</a></th>
+      <th><a href="Math_solver.html">-Math solver</a></th>
     </tr>
     <tr>
-      <th><a href="Stopwatch.html">Stopwatch</a></th>
+      <th><a href="Stopwatch.html">-Stopwatch</a></th>
+      <th><a href="Guess_number_game.html">-Guess-number Game</a></th> 
     </tr>
   </table>
 </div>
