--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -20,6 +20,12 @@
     Fikri Notes
   </div>
 </div>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">My Javascript Project</li>
+  </ol>
+</nav> 
 <div class="kartu">
   <p id="IntroToCS">Project Without Artificial Intelligence</p>
   <hr />
