--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -7,6 +7,7 @@
     <title> My Javascript Menu</title>
     <link rel="stylesheet" href="Style-javascriptproject-menu.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Federant&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Coda&family=Gruppo&display=swap" rel="stylesheet">
    
 </head>
