--- a/Math_solver.html
+++ b/Math_solver.html
@@ -25,6 +25,13 @@
     Fikri Notes
   </div>
 </div>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="Javascriptproject-menu.html">Library</a></li>
+    <li class="breadcrumb-item"><a href="Math_solver.html">Data</a></li>
+  </ol>
+</nav>  
 <p align="justify">Pembelajaran matematika seringkali terasa melelahkan. sebenarnya mudah, namun karena terlalu banyak kalkulasi yang harus dilakukan, otak kita menjadi lelah. Nah, karena itu saya merancang program ini untuk menyelesaikan permasalahan matematika sederhana, yaitu persamaan linear 2 variabel. Program ini mengambil input berupa 2 buah persamaan linear 2 variabel dan output nya adalah nilai dari x dan y yang hendak kita cari.</p>
 <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
