--- a/Math_solver.html
+++ b/Math_solver.html
@@ -32,7 +32,7 @@
     <li class="breadcrumb-item"><a href="Math_solver.html">Math Solver</a></li>
   </ol>
 </nav>  
-<p align="justify">Pembelajaran matematika seringkali terasa melelahkan. sebenarnya mudah, namun karena terlalu banyak kalkulasi yang harus dilakukan, otak kita menjadi lelah. Nah, karena itu saya merancang program ini untuk menyelesaikan permasalahan matematika sederhana, yaitu persamaan linear 2 variabel. Program ini mengambil input berupa 2 buah persamaan linear 2 variabel dan output nya adalah nilai dari x dan y yang hendak kita cari.</p>
+<p align="justify">Pembelajaran matematika seringkali terasa melelahkan. sebenarnya mudah, namun karena terlalu banyak kalkulasi yang harus dilakukan, otak kita menjadi lelah. Nah, karena itu saya merancang program ini untuk menyelesaikan permasalahan matematika sederhana, yaitu persamaan linear 2 variabel dan 3 variabel. Program ini mengambil input berupa 2 buah persamaan linear 2 variabel atau 3 buah persamaan 3 variabel. output nya adalah nilai dari x dan y (dan z) yang hendak kita cari.</p>
 <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -43,7 +43,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <b>Perhatian!!!</b> <br /> website ini merupakan program beta. karena itu, masih terdapat beberapa bug. misalnya, seperti yang anda ketahui bahwa persamaan 2 variabel memiliki koefisien dan konstanta. misalkan koefisien anda adalah 1 ,maka biasanya anda menulis "x" atau "y" langsung tanpa menulis angka 1 didepannya. namun, karena website ini masih dalam tahap pengembangan, anda tetap harus menuliskan "1y" atau "1x".<br />pada saat anda mengetikkan soal, jangan berikan spasi antara karakter-karakter yang anda tulis.
+        <b>Perhatian!!!</b> <br /> website ini merupakan program beta. karena itu, masih terdapat beberapa bug. misalnya, seperti yang anda ketahui bahwa persamaan 2 variabel memiliki koefisien dan konstanta. misalkan koefisien anda adalah 1 ,maka biasanya anda menulis "x" atau "y" langsung tanpa menulis angka 1 didepannya. namun, karena website ini masih dalam tahap pengembangan, anda tetap harus menuliskan "1y" atau "1x".<br />pada saat anda mengetikkan soal, jangan berikan spasi antara karakter-karakter yang anda tulis. Untuk persamaan 2 variabel,persamaan anda hanya boleh ditulis dalam variabel x dan y. Dan untuk persamaan linear 3 variabel, persamaan anda hanya boleh dinyatakan dalam variabel x, y, dan z.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
