--- a/Math_solver.html
+++ b/Math_solver.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Math Solver | Fikri Notes</title>
