--- a/Turunan-bilangan-euler.html
+++ b/Turunan-bilangan-euler.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" href="IMG_20200730_223215.JPG">
+    <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kalkulus</title>
