--- a/calculus.html
+++ b/calculus.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" type="jpg" href="/fotoprofil.jpg"/>
+  <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kalkulus</title>
