--- a/Calculator.html
+++ b/Calculator.html
@@ -54,6 +54,9 @@
 
           <div class="btn-group mr-2 btn-block" role="group" aria-label="Fifth group">
             <button onclick="bnol()" id="b0" type="button" class="btn btn-primary">0</button>
+            <button onclick="bbk()" id="bbk" type="button" class="btn btn-primary">(</button>
+            <button onclick="btk()" id="btk" type="button" class="btn btn-primary">)</button>
+            <button onclick="btitik()" id="btitik" type="button" class="btn btn-primary">.</button>
           
         </div>
       </div>
