--- a/Math-menu.html
+++ b/Math-menu.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link rel="icon" href="logo_fix.png" height=250px> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="Style-math-menu.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Coda&family=Press+Start+2P&family=Unica+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
@@ -21,17 +21,26 @@
     Fikri Notes
   </div>
 </div>
+<nav aria-label="breadcrumb" id="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="Math-menu.html">Matematika</a></li>
+  </ol>
+</nav>
 <div class="kartu">
   <p id="Calculus">Calculus</p>
   <hr />
-  <table width="300" border="0">
+  <table align="center" border="0">
     <tr>
-      <th width="150">
-        <a href="Turunan-bilangan-euler.html">Turunan Bilangan Euler/Konstanta Napier</a>
+      <th >
+        <a href="Turunan-bilangan-euler.html">Turunan Bilangan Euler/Konstanta Napier
+        </a>
       </th>
-      <th><a href="Turunan-ln-x.html">Turunan Fungsi ln|x|</a></th>
-      <td>
-      </td>
+      <th>
+        <a href="Turunan-ln-x.html">turunan fungsi ln|x| fikri mulyana setiawan
+        </a>
+      </th>
+      
     </tr>
   </table>
 </div>
