--- a/Math-menu.html
+++ b/Math-menu.html
@@ -37,7 +37,7 @@
         </a>
       </th>
       <th>
-        <a href="Turunan-ln-x.html">turunan fungsi ln|x| fikri mulyana setiawan
+        <a href="Turunan-ln-x.html">turunan fungsi ln|x|
         </a>
       </th>
       
