--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -25,7 +25,7 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">My Javascript Project</li>
+    <li class="breadcrumb-item"><a href="Javascriptproject-menu.html">My Javascript Project</a></li>
   </ol>
 </nav> 
 <div class="kartu">
