--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -29,7 +29,7 @@
   </ol>
 </nav> 
 <div class="kartu">
-  <p id="IntroToCS">Project Without Artificial Intelligence</p>
+  <p id="ProjectWithoutAi">Project Without Artificial Intelligence</p>
   <hr />
   <table width="300" border="0">
     <tr>
